--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Animal Counter</title>
 </head>
 <body>
-    
+    <div id="main-container">
+        <div class="img-container">
+            <img src="resources/img/Stag/Stag_1.png" alt="Gesicht von einem gezeichneten Hasen">
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
