--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div id="main-container">
-        <div class="img-container">
-            <img src="resources/img/Stag/Stag_1.png" alt="Gesicht von einem gezeichneten Hasen">
+        <div class="counter-container">
+            <label for="counter">Hit numbers</label>
+            <input type="number" id="counter">
         </div>
+        <div class="img-container">
+            <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hasen">
+        </div> 
     </div>
 
     <script src="index.js"></script>
