--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div id="main-container">
         <div class="counter-container">
-            <label for="counter">Numbers hit</label>
-            <h1>
+            <label for="counter">Hit</label>
                 <input type="number" id="counter">
-            </h1>
+                <h2>0</h2>
+            <label for="counterLevel">Level</label>
+                <input type="number">
+                <h2>0</h2>
         </div>
         <div class="img-container">
             <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hirsch">
