--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Animal Counter</title>
 </head>
-<body>
+<body class="stag">
     <div id="main-container">
         <div class="counter-container">
             <label for="counter">Hit</label>
