--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body class="stag">
     <div id="main-container">
+
+       <h1>Animal Hit Counter</h1>
+
         <div class="counter-container">
+            
             <label for="counter">Hit</label>
                 <input type="number" id="counter">
                 <h2>0</h2>
