--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body class="stag">
     <div id="main-container">
-        <div class="counter-container">
+        <div class="container">
             <h1>Animal Hit Counter</h1>
-
+            
+        </div>
+        <div class="counter-container">
             <label for="counter">Hit</label>
                 <input type="number" id="counter">
                 <h2>0</h2>
