--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <div id="main-container">
         <div class="container">
             <h1>Animal Hit Counter</h1>
-            
         </div>
         <div class="counter-container">
             <label for="counter">Hit</label>
@@ -21,10 +20,19 @@
                 <h2>0</h2>
         </div>
         <div class="img-container">
-            <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hirsch">
+            <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hirsch" />
         </div> 
     </div>
 
+    <div id="winnerText" class="hidden">
+        <p>
+          Herzlichen Glückwunch! <br />
+          DU hast gewonnen!
+        </p>
+        <button id="push">Nochmal spielen</button>
+      </div>
+
+      
     <script src="index.js"></script>
 </body>
 </html> 
