--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
         <div class="container">
             <h1>Animal Hit Counter</h1>
         </div>
-        <div class="counter-container">
-            <label for="counter">Hit</label>
+        <div class="container counter-container">
+            <div class="input-container">
+                <label for="counter">Hit</label>
                 <input type="number" id="counter">
                 <h2>0</h2>
-            <label for="counterLevel">Level</label>
+            </div>
+            <div class="input-container">
+                <label for="counterLevel">Level</label>
                 <input type="number">
                 <h2>0</h2>
+            </div>
         </div>
-        <div class="img-container">
+        <div class="container img-container">
             <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hirsch" />
         </div> 
     </div>
