--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="container counter-container">
             <div class="input-container">
                 <label for="counter">Hit</label>
-                <input type="number" id="counter">
+                <input type="number" class="counter">
                 <h2>0</h2>
             </div>
             <div class="input-container">
                 <label for="counterLevel">Level</label>
-                <input type="number">
-                <h2>0</h2>
+                <input type="number" class="counter">
+                <h2 class="whitespace">0</h2>
             </div>
         </div>
         <div class="container img-container">
