last level added?

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="container img-container">
-            <img src="resources/img/Stag/Stag_1.png" id="img1" alt="Gesicht von einem gezeichneten Hirsch" />
+            <img src="resources/img/Stag/Stag_1.png" id="img1"  />
         </div> 
     </div>
 
